--- a/SingleVehiclePage/singleVehiclePage.html
+++ b/SingleVehiclePage/singleVehiclePage.html
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="col-12 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
-                            <a class="d-block" href="index.html" rel="home" style="font-size: 25px; text-decoration: none; color: white;">රියසෙවන​.COM</a>
+                            <a class="d-block" href="../index.html" rel="home" style="font-size: 25px; text-decoration: none; color: white;">රියසෙවන​.COM</a>
                             <a href="#"><i class="far fa-user fa-2x" style="color: white; margin-left: 25px; "
                                     data-toggle="tooltip" title="Login"></i></a>
                         </div><!-- .site-branding -->
