add link to vehivle pages

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 <div class="thumbnail" id="category">
                                     <div class="caption">
                                         <h3>Cars</h3>
-                                        <a href=""><img src="./images/cars_logo.jpg" alt=""></a>
+                                        <a href="./VehicleListPage/car.html"><img src="./images/cars_logo.jpg" alt=""></a>
                                     </div>
                                 </div>
                         </div>
@@ -95,7 +95,7 @@
                                 <div class="thumbnail" id="category">
                                     <div class="caption">
                                         <h3>Vans</h3>
-                                        <a href=""><img src="./images/van_logo.jpg" alt=""></a>
+                                        <a href="./VehicleListPage/van.html"><img src="./images/van_logo.jpg" alt=""></a>
                                     </div>
                                 </div>
                         </div>
@@ -104,7 +104,7 @@
                                 <div class="thumbnail" id="category">
                                     <div class="caption">
                                         <h3>Moter Bike</h3>
-                                        <a href=""><img src="./images/Traile_logo.jpg" alt=""></a>
+                                        <a href="./VehicleListPage/bike.html"><img src="./images/Traile_logo.jpg" alt=""></a>
                                     </div>
                                 </div>
                         </div>
