--- a/VehicleListPage/vehicleListPage.html
+++ b/VehicleListPage/vehicleListPage.html
@@ -292,7 +292,7 @@
                 <div class="well well-sm">
                     <div class="row">
                         <div class="col-sm-6 col-md-4">
-                            <img class="img-thumbnail rounded float-left" src="../images/7.jpg" />
+                            <img class="img-thumbnail rounded float-left" src="../images/car_1.jpg" />
                         </div>
                         <div class="col-sm-6 col-md-8">
                             <h4>
